# microsoft-store-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
microsoft_store_scraper/constants/: regex.py  request.py
microsoft_store_scraper/features/: app.py  search.py
microsoft_store_scraper/utils/: request.py
src/microsoft_store_scraper/: __init__.py  exceptions.py
src/microsoft_store_scraper/constants/: regex.py  request.py
src/microsoft_store_scraper/features/: app.py  collection.py  publisher.py  search.py
src/microsoft_store_scraper/utils/: __init__.py
tests/e2e_tests/: test_app.py  test_collection.py  test_publisher.py  test_search.py
